Added: Api added to swagger
