# server/api/services/auth.service.ts
@@ -1,11 +1,14 @@
 import L from '../../common/logger';
 import DynamoDB from '../../common/db/dynamo.db';
 import { User, Auth } from './../../api/models/user';
+import { TenantService } from './../services/tenant.service';
 
 import * as crypto from 'crypto';
 import jwt from 'jsonwebtoken';
+import { Tenant } from '../models/tenant';
 
 export class AuthService {
+  tenantService: TenantService = new TenantService();
   async login(params: Auth): Promise<User> {
     L.info(`Authendating user with username ${params.user_name}`);
 
@@ -46,13 +49,16 @@ export class AuthService {
         },
         'user_id'
       );
-      for (const item of userTenant.Items) {
-        const tenant: any = await DynamoDB.find('tenants', {
-          tenant_id: item.tenant.id,
-        });
-        delete tenant.db_password;
-        delete tenant.db_name;
-        if (tenant) userTenants.push(tenant);
+      console.log('userTenant', userTenant);
+      if (userTenant) {
+        for (const item of userTenant.Items) {
+          const tenant: any = await DynamoDB.find('tenants', {
+            tenant_id: item.tenant.id,
+          });
+          delete tenant.db_password;
+          delete tenant.db_name;
+          if (tenant) userTenants.push(tenant);
+        }
       }
       return { ...user, auth: true, token, user_tenants: userTenants };
     } catch (error) {
@@ -62,16 +68,37 @@ export class AuthService {
     }
   }
 
-  async signup(params: User): Promise<string[]> {
+  async signup(params: any): Promise<string[]> {
     L.info(`Signing up new user with username ${params.user_name}`);
-    const userName = params.user_name.toString();
-    const email = params.email.toString();
-    const tenantId = params.tenant_id.toString();
-    const password = params.password.toString();
+    const organization = params.organization;
+    const dbUser = params.db_user;
+    const dbPassword = params.db_password;
+    const dbPort = params.db_port;
+    const dbHost = params.db_host;
+    const userName = params.user_name;
+    const email = params.email;
+    const config = JSON.stringify(params.config);
+    const isDeleted = params.is_deleted;
+    const password = params.password;
     const encryptionKey = process.env.ENCRYPTION_KEY as string;
     const hash = crypto.createHmac('sha512', encryptionKey).update(password);
     const hashedPass = hash.digest('hex').toString();
     try {
+      const tenantParams = {
+        organization,
+        email,
+        db_user: dbUser,
+        db_password: dbPassword,
+        db_port: dbPort,
+        db_host: dbHost,
+        config,
+        is_deleted: isDeleted,
+      };
+      const tenant: any = await this.tenantService.create(tenantParams);
+      console.log('tenant', tenant);
+      if (tenant instanceof Error) {
+        throw new Error('Something went wrong');
+      }
       const user = await DynamoDB.find('users', { user_name: userName });
       if (user instanceof Error) {
         throw new Error('Something went wrong');
@@ -95,7 +122,7 @@ export class AuthService {
         const dbUserTenantParams = {
           id: new Date().getTime(),
           user_id: +dbUserParams.id,
-          tenant_id: tenantId,
+          tenant_id: tenant.id,
           date_created: Date().toString(),
         };
 
